cmake_minimum_required(VERSION 3.15)
project(data_structure)

set(CMAKE_CXX_STANDARD 20)

add_executable(data_structure hello_world.cpp adding_array_elements.cpp matrix_addition.cpp eight_queen_for_fun_xd.cpp matrix_multiplication.cpp sequential_search.cpp)
add_executable(adding_array_elements adding_array_elements.cpp)
add_executable(hello_world hello_world.cpp)
add_executable(matrix_addition matrix_addition.cpp)
add_executable(eight_queen_for_fun_xd eight_queen_for_fun_xd.cpp)
add_executable(matrix_multiplication matrix_multiplication.cpp)